<resources>
    <string name="app_name">Project Scandium</string>
    <string name="title_activity_achievements">Achievements</string>
    <string name="config_name_text">Config. Name:</string>
    <string name="upper_score_text">Great Score:</string>
    <string name="lower_score_text">Poor Score:</string>
    <string name="save_config_text">Save</string>
    <string name="delete_config_text">Delete</string>
    <string name="config_colon_text">:</string>
    <string name="config_dash_text">-</string>
    <string name="add_new_configuration_text">Add new configuration</string>
    <string name="game_num">Game: %1$d</string>
    <string name="game_player">Players: %1$d</string>
    <string name="game_score">Combined Score: %1$d</string>
    <string name="game_level">Achievement Level %1$d: %2$s</string>
    <string name="diff_lvl">Difficulty Level: %1$s</string>
    <string name="normal">Normal</string>
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="game_time">Created: %1$s</string>
    <string name="editGame_title">Edit Game</string>
    <string name="config_ach_text">Achievements</string>
    <string name="config_tutorial_text">\n\n\nGetting Started: \n \n1. Press the plus button \n2. Enter the name of the configuration \n3. Choose set the expected scores \n4. View possible levels by clicking\n the achievements button in edit mode\n5. Enjoy the game! :)</string>
    <string name="game_tutorial">\n\n\nGetting Started: \n \n1. Press the plus button \n2. Enter the Number of Players\n and Combined Score \n3. Press the Save Button. \n4. To edit the config. press Edit \n5. Enjoy the game! :)</string>
    <string name="players">Players: ####</string>
    <string name="combined_score">Combined Score: ####</string>
    <string name="game_1">Game: 1</string>
    <string name="level">Level: ###</string>
    <string name="player">Player</string>
    <string name="total_score">Combined Score</string>
    <string name="player_score">Player Score:</string>
    <string name="player_number_combined_score">Player Number</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="score">Score</string>
    <string name="addPlayer">%1$d</string>
    <string name="addScore">%1$d</string>
    <string name="edit_button_text">EDIT</string>
    <string name="sep_3_15_20pm">Sep 3 @ 15:20PM</string>
    <string name="achievement_base_score_requirements">Achievement Base Score Requirements</string>
    <string name="current_score_rqd_score">Current Score / Rqd Score</string>
    <string name="achievement_name">Achievement Name</string>
    <string name="completion_status">Completion Status</string>
    <string name="achievements_players">Enter Players:</string>
    <string name="by_ethan_ernest_and_sahaj">By Ethan, Ernest, and Sahaj</string>
    <string name="welcome_to_team_scandium">Team Scandium Presents</string>
    <string name="skip">Skip</string>
    <string name="todo">TODO</string>
    <string name="add_game_text">To add a new game please press a config. from the list above</string>
    <string name="play_game_text">To view achievement please press play game button after selecting a game!</string>
    <string name="add_player_text">To add the scores for players greater than 2 please scroll through the list above!</string>
    <string name="game_title">Cat Stat Combat</string>
    <string name="save_button_text">SAVE</string>
    <string name="fab">FAB</string>
    <string name="NewConfigTitle">New Game Config.</string>
    <string name="EditConfigTitle">Edit Game Config.</string>
    <string name="ConfigurationListTitle">Game Configurations</string>
    <string name="GameNumberText">Game: </string>
    <string name="Add_Game">Add New Game</string>
    <string name="game_diff">Game Difficulty</string>
    <string name="game_theme">Game Theme</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="SaveGameTitle">Save Game?</string>
    <string name="SaveGameMessage">Are You Sure Want to Save This Game?</string>
    <string name="SaveConfigTitle">Save Config?</string>
    <string name="SaveConfigMessage">Are You Sure Want to Save This Configuration?</string>
    <string name="DeleteGameTitle">Delete Game?</string>
    <string name="DeleteGameMessage">Are You Sure Want to Delete This Game?</string>
    <string name="DeleteConfigTitle">Delete Config?</string>
    <string name="DeleteConfigMessage">Are You Sure Want to Delete This Configuration?</string>
    <string name="ReturnToGameListTitle">Return to Game List?</string>
    <string name="ReturnToConfigListTitle">Return to Config List?</string>
    <string name="ReturnMessage">Nothing is saved yet.\nDo you still wish to return?</string>
    <string name="EmptyFieldToast">Please fill in all fields</string>
    <string name="ExitAppMessage">Are you sure you want to exit the app?</string>
    <string name="configTitle">Config: </string>
    <string name="greatText">Great: </string>
    <string name="poorText">Poor: </string>
    <string name="minScoreText">Minimum Score: </string>
    <string name="ErrorNum">Please enter a valid number</string>
    <string name="ErrorNegativeScore">Score cannot be negative</string>
    <string name="ErrorLowerNum">"Lower Score can't be less/equal to Upper Score"</string>
    <string name="EmptyField">This field should not be empty</string>
    <string name="ZeroField">This field should not be 0</string>
    <string name="IllegalField">Contain Illegal Text</string>
    <string name="play_game">Play Game</string>
    <string name="congrats_msg">Achievement level %1$d:\n%2$s Earned!</string>
    <string name="ok_select">OK</string>
    <string name="button_txt_theme"> Theme </string>
    <string name="playerText">Player</string>
    <string name="achievement_msg">\nCongratulations!\nYou reached Level: %1$d \n</string>
    <string name="about_button_text">about</string>
    <string name="aboutPageTitle">About Us</string>
    <string name="ach_level">Achievement Level %1$d: </string>
    <string name="replay">Replay</string>
    <string name="next_theme">Cycle Theme</string>
    <string name="photo">Photo</string>
    <string name="add">Add</string>
</resources>