<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/GameNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="10dp"
        android:text="@string/game_num"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtPlayer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="36dp"
        android:text="@string/game_player"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="36dp"
        android:text="@string/game_score"
        android:textStyle="bold"
        android:textColor="#3F51B5"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/txtTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="14dp"
        android:text="@string/time"
        android:textColor="@color/black"
        android:textSize="12sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/txtLevel"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="76dp"
        android:text="@string/game_level"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/txtDiffLvl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="56dp"
        android:text="@string/diff_lvl"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        android:textStyle="bold" />
</RelativeLayout>