<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundgradient"
    tools:context=".GameConfig">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="4dp" />

    <TextView
        android:id="@+id/configNameTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        android:text="@string/config_name_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/configNameBox"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/configNameTxt"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/UpperScoreTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:text="@string/upper_score_text"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configNameTxt" />

    <EditText
        android:id="@+id/UpperScoreBox"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/UpperScoreTxt"
        app:layout_constraintTop_toBottomOf="@+id/configNameBox"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/LowerScoreTxt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="35dp"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:text="@string/lower_score_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UpperScoreTxt" />

    <EditText
        android:id="@+id/LowerScoreBox"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="numberSigned"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/LowerScoreTxt"
        app:layout_constraintTop_toBottomOf="@+id/UpperScoreBox"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/deleteConfig"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="55dp"
        android:text="@string/delete_config_text"
        android:textSize="16sp"
        android:backgroundTint="@color/Red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/achConfig" />

    <Button
        android:id="@+id/achConfig"
        android:layout_width="0dp"
        android:layout_height="55dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="70dp"
        android:text="@string/config_ach_text"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LowerScoreBox" />

</androidx.constraintlayout.widget.ConstraintLayout>